# EUvsDisinfo

./: .pre-commit-config.yaml  README.md  app.py  callbacks.py  goodtables.yml  index.py  language-territories.json  layouts.py  pyproject.toml  requirements.txt  scrape_database.py  scrape_publications.py
.github/workflows/: CI.yml  codeql-analysis.yml
analysis/: convert.py  cooccurrence.py  language-territory.py
apps/: __init__.py  layouts.py  util.py  visualize.py
apps/database/: __init__.py  callbacks.py  data.py  layouts.py
apps/home/: __init__.py  home.md  layouts.py
apps/publications/: __init__.py  callbacks.py  data.py  layouts.py
assets/css/: style.css
data/: README.md  datapackage.json  invalid_archive.csv  invalid_disproof_links.csv  invalid_publication.csv  no_archive.csv  no_countries.csv  no_keywords.csv  no_languages.csv  no_outlets.csv  posts.csv  publications.csv
scrape/: __init__.py  __main__.py  report.py  scrape_database.py  scrape_publications.py  scraping.py  util.py
tests/: test_data.py
viz/: app.py  util.py  visualize.py  viz_publishers.py
