[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = 'black'
multi_line_output = 3

[tool.poetry]
name = "euvsdisinfo"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.8,<4"
gunicorn = "^20.1.0"
plotly = "^5.5.0"
pandas = "^1.3.5"
numpy = "^1.22.1"
dash = "^2.0.0"
requests = "^2.27.1"
beautifulsoup4 = "^4.10.0"
tqdm = "^4.62.3"
langcodes = "^3.3.0"
python-igraph = "^0.9.6"
frictionless = "^4.23.2"
tld = "^0.12.6"
dash-bootstrap-components = "^1.0.2"
country-converter = "^0.7.4"
newspaper3k = "^0.2.8"
urllib3 = "^1.26.8"
orjson = "^3.6.5"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
